--- a/index.html
+++ b/index.html
@@ -332,9 +332,144 @@
             <div>04</div>
         </div>
         <div class="container1">
-            <div class="logo"></div>
+            <div class="logo1"></div>
           </div>
-          
+          <div class="tabel_container">
+          <div class="description-1 descriptio-2 tabel_2 tabel_position">
+            <table>
+                <tr>
+                    <th colspan="12" class="tabel_1_block_1">RECOMMENDED AMOUNT OF SRB TO ORDER</th>
+                </tr>
+                <tr>
+                    <th colspan="12" class="tabel_1_block_1">SRB</th>
+                </tr>
+                <tr class="text-center">
+                    <td colspan="3" class="tabel_1_block_2">Volume</td>
+                    <td colspan="3" class="tabel_1_block_2">Initial Dosage ppm</td>
+                    <td colspan="3" class="tabel_1_block_2">Ongoing Dosage ppm </td>
+                    <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>    
+                </tr>
+                <tr>
+                    <td colspan="4" class="tabel_1_block_2"></td>
+                    <td colspan="4" class="tabel_1_block_2">Estimated MSRP (Excluding Shipping)</td>
+                    <td colspan="4" class="tabel_1_block_2">$</td>   
+                </tr>
+                <tr class="text-center">
+                    <td colspan="12" class="tabel_1_block_3">Price Quoted is the MSRP for SRB. A combination of SRB & SRBC are recommended if the water temperature drops below 50°F during the treatment program.</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="description-1 descriptio-2 tabel_2">
+        <table>
+            <tr>
+                <th colspan="12" class="tabel_1_block_1">RECOMMENDED AMOUNT OF SRB MAX TO ORDER</th>
+            </tr>
+            <tr>
+                <th colspan="12" class="tabel_1_block_1">SRB MAX</th>
+            </tr>
+            <tr class="text-center">
+                <td colspan="3" class="tabel_1_block_2">Volume</td>
+                <td colspan="3" class="tabel_1_block_2">Initial Dosage ppm</td>
+                <td colspan="3" class="tabel_1_block_2">Ongoing Dosage ppm </td>
+                <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>    
+            </tr>
+            <tr>
+                <td colspan="4" class="tabel_1_block_2"></td>
+                <td colspan="4" class="tabel_1_block_2">Estimated MSRP (Excluding Shipping)</td>
+                <td colspan="4" class="tabel_1_block_2">$</td>   
+            </tr>
+            <tr class="text-center">
+                <td colspan="12" class="tabel_1_block_3">Price Quoted is the MSRP for SRB MAX. A combination of SRB MAX & SRBC MAX are recommended if the water temperature drops below 50°F during the treatment program.</td>
+            </tr>
+        </table>
+    </div>
+    <div class="text-background-color">
+        <p class="text-body">If the water temperature drops below 50°F during the treatment program,
+            contact Sludge Reducing Bacteria for assistance with selecting the correct
+            amount of each product.</p>
+    </div>
+    <div class="descriptio-1 footer">
+        <div style="color: rgb(16, 199, 199);">w w w . s l u d g e r e d u c i n g b a c t e r i a . c o m
+        </div>
+        <div>05</div>
+    </div>
+    <div class="container-input1">
+        <div>
+            <img class="logo" src="logo.png" alt="Logo">
+        </div>
+    </div>
+    <div class="main-background">
+    <div class="descriptio-1">
+        <div class="box-design"></div>
+        <h1 class="description-h1">
+            Additional Products for <span class="bold-it-1"> Consideration</span>
+        </h1>
+    </div>
+
+    <div class="descriptio-1">
+        <div class="new-headings">
+            <h3 class="new-sub-headings">Liquid Sludge Reducing Bacteria</h3>
+            <div class="box-design1"></div>
+        </div>
+        <p class="text-margn">“SRB” is available in a liquid form (LSRB).
+            Substitue 1 Gallon of LSRB for every 4.2 packets
+            of “SRB”. Available in 5, 55, & 275 gallons.</p>
+    </div>
+    <div class="descriptio-1 text_body_space">
+        <div class="new-headings">
+            <h3 class="new-sub-headings">Liquid Sludge Reducing Bacteria Cold</h3>
+            <div class="box-design1"></div>
+        </div>
+        <p class="text-margn">“SRBC” is available in a liquid form (LSRBC).
+            Substitue 1 Gallon of LSRBC for every 4.2 packets
+            of “SRBC”. Available in 5, 55, & 275 gallons.</p>
+    </div>
+    <div class="descriptio-1 text_body_space">
+        <div class="new-headings">
+            <h3 class="new-sub-headings">Liquid Injection Peristaltic Pump</h3>
+            <div class="box-design1"></div>
+        </div>
+        <p class="text-margn">Automate your liquid injection system with the
+            addition of a peristaltic pump. 110-120 volt
+            single phase electricity is required.</p>
+    </div>
+</div>
+<div class="descriptio-1 text_body_space">
+    <div class="new-headings">
+        <h3 class="new-sub-headings">Sludge Reducing Bacteria DARTS</h3>
+        <div class="box-design1"></div>
+    </div>
+    <p>SRB “DARTS” are a speacialized "slow-releasing" formulation of SRB. DARTS are perfect for
+        “sludge mounds” or any areas with significant sludge accumulation. Each DART is 6.5 oz.
+        Available in a 30 pound pail.</p>
+</div>
+<div class="descriptio-1 text_body_space">
+    <div class="new-headings">
+        <h3 class="new-sub-headings">Block of SRB</h3>
+        <div class="box-design1"></div>
+    </div>
+    <p>Block of SRB is a a specialized "slow-releasing" formulation of SRB that dissolve slowly over
+        30 days. Block of SRB is perfect for lift stations, wet wells, and collection systems.
+        Available in 5, 10, & 20 pound blocks.</p>
+</div>
+<div class="descriptio-1 text_body_space">
+    <div class="new-headings">
+        <h3 class="new-sub-headings">Liquid & Air Distribution System</h3>
+        <div class="box-design1"></div>
+    </div>
+    <p>The Liquid & Air Ditribution System is a 12-volt battery operated system for use on a boat.
+        Inject air and bacteria directly into the sludge layer. This system is ideal for evenly
+        distributing any product to very large lagoons.
+        Liquid & Air Distribution System
+        </p>
+</div>
+<footer class="footer">
+    <span class="footer-text">Sludge Reducing Bacteria
+        3964 Grove Ave, Gurnee, IL 60031</span>
+    <span class="footer-text">sales@sludgereducingbacteria.com</span>
+    <span class="footer-text">(847) 782 - 0044</span>
+  </footer>
     </div>
 
 </body>
