pdf document final code

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 recommended to maintain a minimum dilution ratio of 4 gallons per 1-2 packets.
             </p>
         </div>
-        <div class="descriptio-1 footer">
+        <div class="descriptio-1 sub-footer">
             <div style="color: rgb(10, 212, 212);">w w w . s l u d g e r e d u c i n g b a c t e r i a . c o m
             </div>
             <div>02</div>
@@ -184,7 +184,7 @@
                 </tr>
             </table>
         </div>
-        <div class="descriptio-1 footer">
+        <div class="descriptio-1 sub-footer">
             <div style="color: rgb(16, 199, 199);">w w w . s l u d g e r e d u c i n g b a c t e r i a . c o m
             </div>
             <div>03</div>
@@ -207,10 +207,10 @@
                     <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>
                 </tr>
                 <tr>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
                 </tr>
                 <tr class="text-center">
                     <td colspan="6" class="tabel_1_block_2">Lagoon 1 Initial Treatment</td>
@@ -219,15 +219,16 @@
                 <tr>
                     <td colspan="3" class="tabel_1_block_2">Recommended Product Dose Frequency Total Number of Packets
                     </td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
                     <td colspan="3" class="tabel_1_block_2">Recommended Product Dose Frequency Packets / Application
                         Total Number of Packets</td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
                 </tr>
                 <tr class="text-center">
                     <td colspan="12" class="tabel_1_block_3">Note: Round to the nearest half packet there?</td>
                 </tr>
             </table>
+            
 
         </div>
         <div class="description-1 descriptio-2 tabel_2">
@@ -242,10 +243,10 @@
                     <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>
                 </tr>
                 <tr>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
                 </tr>
                 <tr class="text-center">
                     <td colspan="6" class="tabel_1_block_2">Lagoon 2 Initial Treatment</td>
@@ -277,10 +278,10 @@
                     <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>
                 </tr>
                 <tr>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
                 </tr>
                 <tr class="text-center">
                     <td colspan="6" class="tabel_1_block_2">Lagoon 3 Initial Treatment</td>
@@ -312,10 +313,10 @@
                     <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>
                 </tr>
                 <tr>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
-                    <td colspan="3" class="tabel_1_block_2"></td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
+                    <td colspan="3" class="tabel_1_block_2">&nbsp;</td>
                 </tr>
                 <tr class="text-center">
                     <td colspan="6" class="tabel_1_block_2">Lagoon 4 Initial Treatment</td>
@@ -334,7 +335,7 @@
                 </tr>
             </table>
         </div>
-        <div class="descriptio-1 footer">
+        <div class="descriptio-1 sub-footer">
             <div style="color: rgb(16, 199, 199);">w w w . s l u d g e r e d u c i n g b a c t e r i a . c o m
             </div>
             <div>04</div>
@@ -349,21 +350,21 @@
                         <th colspan="12" class="tabel_1_block_1">RECOMMENDED AMOUNT OF SRB TO ORDER</th>
                     </tr>
                     <tr>
-                        <th colspan="12" class="tabel_1_block_1">SRB</th>
+                        <th colspan="12" class="tabel-text-bold">SRB</th>
                     </tr>
-                    <tr class="text-center">
-                        <td colspan="3" class="tabel_1_block_2">Volume</td>
-                        <td colspan="3" class="tabel_1_block_2">Initial Dosage ppm</td>
-                        <td colspan="3" class="tabel_1_block_2">Ongoing Dosage ppm </td>
-                        <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>
+                    <tr class="tabel-text-bold-2">
+                        <td colspan="3">Total Packets</td>
+                        <td colspan="3">Packets / Pail 20 Packets</td>
+                        <td colspan="3"># of Pails</td>
+                        <td colspan="3">MSRP Price / Pail $</td>
                     </tr>
-                    <tr>
-                        <td colspan="4" class="tabel_1_block_2"></td>
-                        <td colspan="4" class="tabel_1_block_2">Estimated MSRP (Excluding Shipping)</td>
-                        <td colspan="4" class="tabel_1_block_2">$</td>
+                    <tr class="tabel-text-bold-3">
+                        <td colspan="4">&nbsp;</td>
+                        <td colspan="4">Estimated MSRP (Excluding Shipping)</td>
+                        <td colspan="4">$</td>
                     </tr>
-                    <tr class="text-center">
-                        <td colspan="12" class="tabel_1_block_3">Price Quoted is the MSRP for SRB. A combination of SRB
+                    <tr class="tabel-text-bold-4">
+                        <td colspan="12">Price Quoted is the MSRP for SRB. A combination of SRB
                             & SRBC are recommended if the water temperature drops below 50°F during the treatment
                             program.</td>
                     </tr>
@@ -376,22 +377,22 @@
                     <th colspan="12" class="tabel_1_block_1">RECOMMENDED AMOUNT OF SRB MAX TO ORDER</th>
                 </tr>
                 <tr>
-                    <th colspan="12" class="tabel_1_block_1">SRB MAX</th>
+                    <th colspan="12" class="tabel-text-bold">SRB MAX</th>
                 </tr>
-                <tr class="text-center">
-                    <td colspan="3" class="tabel_1_block_2">Volume</td>
-                    <td colspan="3" class="tabel_1_block_2">Initial Dosage ppm</td>
-                    <td colspan="3" class="tabel_1_block_2">Ongoing Dosage ppm </td>
-                    <td colspan="3" class="tabel_1_block_2">Hydraulic Retention Time</td>
+                <tr class="tabel-text-bold-2">
+                    <td colspan="3">Total Packets</td>
+                    <td colspan="3">Packets / Pail 25 Packets</td>
+                    <td colspan="3"># of Pails</td>
+                    <td colspan="3">MSRP Price / Pail</td>
                 </tr>
-                <tr>
-                    <td colspan="4" class="tabel_1_block_2"></td>
-                    <td colspan="4" class="tabel_1_block_2">Estimated MSRP (Excluding Shipping)</td>
-                    <td colspan="4" class="tabel_1_block_2">$</td>
+                <tr class="tabel-text-bold-3">
+                    <td colspan="4">&nbsp;</td>
+                    <td colspan="4">Estimated Total MSRP (Excluding Shipping)</td>
+                    <td colspan="4">$</td>
                 </tr>
-                <tr class="text-center">
-                    <td colspan="12" class="tabel_1_block_3">Price Quoted is the MSRP for SRB MAX. A combination of SRB
-                        MAX & SRBC MAX are recommended if the water temperature drops below 50°F during the treatment
+                <tr class="tabel-text-bold-4">
+                    <td colspan="12">Price Quoted is the MSRP for SRB MAX. A combination of SRB MAX
+                        & SRBC MAX are recommended if the water temperature drops below 50°F during the treatment
                         program.</td>
                 </tr>
             </table>
@@ -401,7 +402,7 @@
                 contact Sludge Reducing Bacteria for assistance with selecting the correct
                 amount of each product.</p>
         </div>
-        <div class="descriptio-1 footer">
+        <div class="descriptio-1 sub-footer">
             <div style="color: rgb(16, 199, 199);">w w w . s l u d g e r e d u c i n g b a c t e r i a . c o m
             </div>
             <div>05</div>
@@ -446,8 +447,10 @@
                     addition of a peristaltic pump. 110-120 volt
                     single phase electricity is required.</p>
             </div>
+            <img src="reduced_page_6_bactteria.jpg" alt="Photo" class="bottom-right-photo">
+            <div class="color-box-2"></div>
         </div>
-        <div class="descriptio-1 text_body_space">
+        <div class="descriptio-1">
             <div class="new-headings">
                 <h3 class="new-sub-headings">Sludge Reducing Bacteria DARTS</h3>
                 <div class="box-design1"></div>
@@ -456,7 +459,7 @@
                 “sludge mounds” or any areas with significant sludge accumulation. Each DART is 6.5 oz.
                 Available in a 30 pound pail.</p>
         </div>
-        <div class="descriptio-1 text_body_space">
+        <div class="descriptio-1">
             <div class="new-headings">
                 <h3 class="new-sub-headings">Block of SRB</h3>
                 <div class="box-design1"></div>
@@ -465,7 +468,7 @@
                 30 days. Block of SRB is perfect for lift stations, wet wells, and collection systems.
                 Available in 5, 10, & 20 pound blocks.</p>
         </div>
-        <div class="descriptio-1 text_body_space">
+        <div class="descriptio-1">
             <div class="new-headings">
                 <h3 class="new-sub-headings">Liquid & Air Distribution System</h3>
                 <div class="box-design1"></div>
